# open-murata-bms

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SAFETY.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
config/: config.example.yaml
docs/: GETTING-STARTED.md  HOME-ASSISTANT.md  README.md  REGISTER-MAP.md
docs/hardware/: murata-module.md
packaging/: 99-ftdi-latency.rules  omb.service
src/omb/: __init__.py  __main__.py  app.py  codec.py  config.py  modbus.py  setup.py
src/omb/drivers/: module_reader.py  murata_module.py
src/omb/integration/: ha_discovery.py  mqtt.py  webdash.py
src/omb/model/: aggregate.py
src/omb/sim/: module.py  server.py
src/omb/transport/: base.py  live.py  sim.py
tests/: test_codec.py  test_config.py  test_driver.py  test_integration.py  test_modbus.py  test_model.py  test_setup.py  test_sim.py  test_webdash.py
